--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta  
+		name = "Mini BrainFM"
+		content = "React front-end built from scratch"
+	/>
 	<title>Mini Brain.fm</title>
 </head>
 <body>
-	<div id="app"></div>
+	<noscript>You need to enable jacaScript to run this app.</noscript>
+	<div id="root"></div>
 </body>
 </html>
 
